# sl_tom

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  local.env.tmpl  manage.py  nginx.conf.tmpl  postgres.env.tmpl  prod.env.tmpl  pyproject.toml  rabbitmq.env.tmpl  start_server.sh  start_worker.sh  update_classifications.sh
.github/workflows/: docker-image.yml
data_services/: tess.py
sl_tom/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
zooniverse/: aggregation.py  apps.py  client.py  data_import.py  forms.py  lightcurve.py  models.py  project.py  urls.py  views.py
zooniverse/management/commands/: aggregate_targets.py  fetch_classifications.py  fetch_subjects.py  import_tess.py  prune_stale_aggregations.py
zooniverse/migrations/: 0001_initial.py  0002_alter_zooniversesubject_end_time_and_more.py  0003_alter_zooniversesubject_end_time.py  0004_alter_zooniverseclassification_user_id.py  0005_zooniversetarget_aggregated_annotations.py  0006_remove_zooniversetarget_aggregated_annotations_and_more.py  0007_zooniversetarget_generated_lightcurve_image.py  0008_zooniversesubjectset_zooniversesubject_retired_at_and_more.py  0009_alter_zooniversesubject_sequence.py
zooniverse/templates/zooniverse/: zooniversetarget_detail.html  zooniversetarget_list.html
zooniverse/templates/zooniverse/partials/: navbar_link.html
