[project]
name = "sl-tom"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam McMaster",email = "me@adam-mcmaster.com"}
]
readme = "README.md"
requires-python = ">3.9,<3.13"
dependencies = [
    "tomtoolkit (>=2.25.2,<3.0.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
    "lightkurve (>=2.5.1,<3.0.0)",
    "panoptes-client (>=1.7.1,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tornado (>=6.5.2,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sentry-sdk[django] (>=2.34.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
